--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Convert seconds or Data object to \"hh:mm:ss\" format.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava"
   },
   "repository": {
     "type": "git",
