--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "build": "rollup -c",
     "test": "ava"
   },
+  "pre-commit": [
+    "test",
+    "build"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/examus/gethhmmss.git"
@@ -36,6 +40,7 @@
     "ava": "^0.25.0",
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.26.0",
+    "pre-commit": "^1.2.2",
     "rollup": "^0.57.1"
   }
 }
